fixed img label font spacing and converted from links

--- a/less/global.less
+++ b/less/global.less
@@ -49,7 +49,7 @@ h2, h3, h4, h5 {
   height:47px;
 }
 
-.recent-project-buttons {
+.recent-project-img-titles {
   text-decoration: none;
   display:flex;
   justify-content: center;
