--- a/less/home-page.less
+++ b/less/home-page.less
@@ -113,22 +113,34 @@
         margin-bottom: 89px;
       }
 
-      .the-villas-button {
+      .the-villas-img-title {
         position: absolute;
         top: 164.3rem;
         right: 84px;
+        font-weight: normal;
+        font-size: 24px;
+        padding-bottom: 6px;
+        padding-left: 8px;
+        letter-spacing: 8px;
       }
 
-      .outskirts-button {
+      .outskirts-img-title {
         position: absolute;
         top: 235.2rem;
         left: 84px;
+        font-weight: normal;
+        font-size: 24px;
+        letter-spacing: 8px;
+        padding-bottom: 6px;
       }
 
-      .the-blocks-button {
+      .the-blocks-img-title {
         position: absolute;
         top: 306.14rem;
         right: 84px;
+        font-weight: normal;
+        font-size: 24px;
+        letter-spacing: 8px;
       }
 
       p {
