--- a/less/nav-header.less
+++ b/less/nav-header.less
@@ -12,17 +12,19 @@
     font-weight: bold;
     font-size: 24px;
     h3 {
-      Color: white;
+      color: white;
     }
   }
 
   .nav-header-button-open {
     margin-top: 1px;
+    height: 21px;
     cursor: pointer;
   }
 
   .nav-header-button-close {
     width: 33px;
+    height: 24px;
     cursor: pointer;
   }
 }
